--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   "dependencies": {
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
+    "@theguild/remark-mermaid": "^0.3.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.545.0",
     "mermaid": "^11.12.1",
     "next": "^15.5.9",
     "next-intl": "^4.3.12",
-    "nextra": "^4.6.0",
-    "nextra-theme-docs": "^4.6.0",
+    "next-themes": "^0.4.6",
+    "nextra": "^4.6.1",
     "postmark": "^4.0.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
