--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,38 +1,15 @@
-name: Greetings-New-Contributor
+name: Greetings
 
 on:
   pull_request_target:
-    types: [opened]
+    types: [opened, reopened]
   issues:
-    types: [opened]
-  workflow_dispatch:
+    types: [opened, reopened]
+
+permissions:
+  contents: read
 
 jobs:
-  greeting:
-    runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
-      contents: read
-
-    steps:
-      - name: Debugging Info
-        run: |
-          echo "Actor: ${{ github.actor }}"
-          echo "Repository: ${{ github.repository }}"
-          echo "Event Name: ${{ github.event_name }}"
-
-      - name: Greet New Contributor
-        uses: actions/first-interaction@v1.1.1
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          issue-message: |
-            👋 Hello! @${{ github.actor }} Welcome to the Kubestellar. 
-
-            We're excited to have you here! Please make sure to check out our [Contribution Guide](https://github.com/kubestellar/ui/blob/dev/CONTRIBUTING.md) and feel free to join our [Slack channel](https://cloud-native.slack.com/archives/C097094RZ3M) for any questions.
-
-          pr-message: |
-            👋 Hello! @${{ github.actor }} Welcome to the Kubestellar. 
-
-            Thank you for submitting your first Pull Request to KubeStellar. We are delighted to have you in our Universe!
-            Please make sure to check out our [Contribution Guide](https://github.com/kubestellar/ui/blob/dev/CONTRIBUTING.md) and feel free to join our [Slack channel](https://cloud-native.slack.com/archives/C097094RZ3M) for any questions.
+  greet:
+    uses: kubestellar/infra/.github/workflows/reusable-greetings.yml@main
+    secrets: inherit
