--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -80,7 +80,9 @@ nav:
               - Missing results in a CombinedStatus object: direct/knownissue-collector-miss.md
               - Kind host not configured for more than two clusters: direct/installation-errors.md
               - Insufficient CPU for your clusters: direct/knownissue-cpu-insufficient-for-its1.md
-      - UI (User Interface): ui-docs/ui-overview.md
+      - UI (User Interface):
+          - Overview: ui-docs/ui-overview.md
+          - Object Explorer: ui-docs/ObjectExplorer.md
       - Teardown: direct/teardown.md
   - Contributing:
       - Overview (How to join in): direct/contribute.md
