docs: add GitHub Actions page to documentation navigation
Signed-off-by: Aaradhy Chinche <aaradhychinche@gmail.com>

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -94,6 +94,7 @@ nav:
           - Docs Management Overview: contribution-guidelines/operations/document-management.md
           - Style Guide: contribution-guidelines/operations/docs-styleguide.md
           - Testing website PRs: contribution-guidelines/operations/testing-doc-prs.md
+          - GitHub Actions: contribution-guidelines/operations/github-actions.md
       - Security:
           - Policy: contribution-guidelines/security/security-inc.md
           - Contacts: contribution-guidelines/security/security_contacts-inc.md
